--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <p class="two">2.0</p>
     <p class="one">1.0</p>
     <p class="zero">0.0 VERY ACID</p>
-    
+    <a href=style.css>2nd file</a>
 </body>
 </html>
